feat: improve image handling and form submission logic
- Add favicon to index.html
- Update webhook URL and add default form values
- Enhance image preview handling with better error states
- Improve form submission logic for image URLs
- Add more detailed logging for debugging

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مولد فيديو UGC - إنشاء فيديو احترافي لمنتجك</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎬</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/heroicons@2.0.18/24/outline/index.js" type="module"></script>
     <script>
         tailwind.config = {
             theme: {
