--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                     </div>
                     
                     <h1 class="text-3xl font-bold bg-gradient-to-r from-gray-700 via-blue-600 to-gray-700 bg-clip-text text-transparent mb-3">
-                        مولد فيديو UGC احترافي
+                        مرحباً بكم في أورنينا UGC
                     </h1>
                     <p class="text-lg text-gray-600 mb-2 font-medium">
-                        إنشاء فيديوهات تسويقية احترافية بالذكاء الاصطناعي
+                        أول منصة سورية متخصصة في توليد فيديوهات UGC باستخدام الذكاء الاصطناعي
                     </p>
                     <p class="text-sm text-gray-500 mb-6 max-w-2xl mx-auto leading-relaxed">
                         دمج صورتك مع صورة المنتج وتوليد فيديو UGC عربي مع Lip Sync باستخدام أحدث تقنيات الذكاء الاصطناعي
@@ -440,7 +440,7 @@
 
         <!-- Footer -->
         <div class="text-center mt-8 text-gray-500 text-sm">
-            <p>جميع الحقوق محفوظة © 2024</p>
+            <p>جميع الحقوق محفوظة © 2024 شركة Ornina</p>
         </div>
     </div>
 
